<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hi-Tea</string>
    <string name="app_title">Sales</string>

    <string name="title_activity_about">About</string>
    <string name="title_section1">Day</string>
    <string name="title_section2">Month</string>
    <string name="title_section3">Top</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="database_path">/sdcard/Download/pos.db3</string>

    <string name="pref_general">General</string>
    <string name="pref_database">Database</string>
    <string name="pref_database_summary">Set database path</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="contact_email">yancyn@gmail.com</string>
    <string name="version">Version</string>
</resources>
